<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@android:id/tabcontent"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    tools:showIn="@layout/app_bar_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/tab_content1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/recommend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="134dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="45dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="585dp"
                    tools:ignore="MissingConstraints">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:background="@null"
                        android:scaleType="centerInside"
                        app:srcCompat="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="TextView" />

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_marginTop="15dp"
                        android:background="@null"
                        android:scaleType="centerInside"
                        app:srcCompat="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="TextView" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_marginTop="15dp"
                        app:srcCompat="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="TextView" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="141dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="45dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="585dp"
                    tools:ignore="MissingConstraints">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:background="@null"
                        android:scaleType="centerInside"
                        app:srcCompat="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="TextView" />

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_marginTop="15dp"
                        app:srcCompat="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="TextView" />

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_marginTop="15dp"
                        app:srcCompat="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="TextView" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tab_content2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_map"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="#FFD95550"
            android:onClick="selectFragment"
            android:text="@string/map"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_sort"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            android:background="#FFaaaaaa"
            android:onClick="selectFragment"
            android:text="@string/sort"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="473dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/fragment_store_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </FrameLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tab_content3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/game_roulette" />

        <ImageButton
            android:id="@+id/button_roulette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.433"
            app:srcCompat="@drawable/roulette_start_button" />

    </android.support.constraint.ConstraintLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tab_content4"
        tools:context="com.bingnerdranch.android.drawlayout_practice.ReviewFragment">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_review"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_menu_send"
            android:onClick="addReiew"/>

        <fragment
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/customlistfragment"
            android:name="com.example.bbbb.teamproject.ReviewFragment"
            tools:layout="@layout/content_main"/>

        <LinearLayout
            android:id="@+id/review_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>


</FrameLayout>
